Updates map icon loading, adds cpal logo to explorer header and intro modal

--- a/src/styles/Modal.scss
+++ b/src/styles/Modal.scss
@@ -92,6 +92,17 @@
           }
         }
       }
+      h2 {
+        .cpal-logo {
+          height: 50px;
+          width: 80px;
+          display: block;
+          margin-left: 1.8rem;
+          background-image: url('./images/cpal.png');
+          background-size: contain;
+          background-repeat: no-repeat;
+        }
+      }
     }
   }
   &.map-modal {
