--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -17,7 +17,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 16px;
+  padding: 8px 16px;
   box-sizing: border-box;
   border-bottom: 1px solid #ccc;
   transition: height 0.4s ease-in-out;
@@ -66,6 +66,16 @@
         }
       }
     }
+  }
+  .cpal-logo {
+    height: 100%;
+    width: auto;
+    display: block;
+    margin-left: 1.8rem;
+    width: 100px;
+    background-image: url('./images/cpal.png');
+    background-size: contain;
+    background-repeat: no-repeat;
   }
   .menu-icon-group {
     svg {
