Map styling adjustments

--- a/src/styles/NonInteractiveScale.scss
+++ b/src/styles/NonInteractiveScale.scss
@@ -39,6 +39,7 @@
         width: 16.66%; // 20%;
         display: inline-block;
         position: relative;
+        // opacity: 0.4;
         &.quintile-2 {
           width: 33.33%;
           &:before {
