--- a/src/styles/MapLegend.scss
+++ b/src/styles/MapLegend.scss
@@ -22,7 +22,7 @@
   @include media-breakpoint-up(md) {
     padding: 24px;
   }
-  box-shadow: 3px 3px 5px #ccc;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
   border-radius: 4px;
   .map-legend-open-filter-panel {
     text-decoration: underline;
