--- a/src/styles/Modal.scss
+++ b/src/styles/Modal.scss
@@ -134,6 +134,15 @@
   &.feedback-modal {
     max-width: 628px;
     .modal-content {
+      .modal-header {
+        button {
+          display: none;
+        }
+      }
+      .modal-body {
+        margin-top: 1.5rem;
+      }
+
       color: $color-untd-gray;
       border-radius: 4px;
       h2 {
@@ -232,6 +241,9 @@
           width: 104px;
         }
       }
+      .row-message textarea {
+        font-size: 14px;
+      }
       .row-submit .form-group {
         display: flex;
         justify-content: flex-end;
@@ -247,6 +259,9 @@
           }
           &.feedback-submit {
             background-color: $color-untd-blue;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             &:hover {
               background-color: lighten(
                 $color-untd-blue,
@@ -254,6 +269,8 @@
               );
               color: $white;
               // color: $color-untd-lightgray;
+            }
+            .spinner-border {
             }
           }
         }
@@ -268,6 +285,24 @@
         input {
           height: auto;
           margin-right: 0.8rem;
+        }
+      }
+      .row-alert {
+        font-size: 10px;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        text-align: right;
+        .alert {
+          background-color: transparent;
+          border: 0;
+          padding: 0.5rem 0 0 0;
+          &.alert-danger {
+            a {
+              color: #721c24;
+              text-decoration: underline;
+            }
+          }
         }
       }
     }
