--- a/src/styles/Modal.scss
+++ b/src/styles/Modal.scss
@@ -158,6 +158,7 @@
       .search-autosuggest {
         border-radius: 4px;
         height: 40px;
+        max-width: 100%;
         .icon-search {
           width: 18px;
           height: 18px;
