--- a/src/styles/SlideoutPanel.scss
+++ b/src/styles/SlideoutPanel.scss
@@ -18,6 +18,8 @@
   .button-close-panel {
     position: absolute;
     right: 0;
+    z-index: 2000;
+    background-color: $white;
     svg {
       width: 24px;
       height: 24px;
