--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -89,6 +89,7 @@ html {
 @import 'SlideoutPanel';
 @import 'PanelFilterView';
 @import 'PanelLayerView';
+@import 'PanelLocationView';
 @import 'PanelInfoView';
 @import 'PanelModal';
 // Interactive scale appears in filter panel
