--- a/src/styles/PanelLocationView.scss
+++ b/src/styles/PanelLocationView.scss
@@ -1,5 +1,6 @@
 .map-panel-slideout-location {
   overflow-y: scroll;
+  height: 100%;
   .panel-sticky {
     position: sticky;
     top: 0;
@@ -7,6 +8,7 @@
     background-color: $white;
     padding: 2.8rem 2rem 2rem;
     border-bottom: 1px solid $color-untd-anothergray;
+    z-index: 501;
     h5 {
       @include font-gotham-book;
       font-weight: 600;
@@ -35,6 +37,47 @@
       line-height: 1.6rem;
       letter-spacing: 1%;
       font-color: $color-untd-darkgray;
+      margin-top: 1.4rem;
+      svg {
+        margin-left: 0.35rem;
+        margin-top: -2px;
+      }
+    }
+  }
+  .n-i-scale {
+    margin-top: 6px;
+    margin-bottom: 3rem;
+    padding-right: 1px;
+    padding-left: 1px;
+    &:after,
+    &:before {
+      display: none;
+    }
+    .n-i-scale-quintiles {
+      width: 100%;
+      top: -5px !important;
+      // The line through the quintiles.
+      border: 1px solid #ccc;
+      height: 9px;
+      box-sizing: content-box;
+      margin-top: 0.6rem;
+      &:after,
+      &:before {
+        display: none !important;
+      }
+      .n-i-scale-quintile {
+        height: 13px;
+        border-right: 1px solid #ccc;
+        top: -1px;
+        width: 16.665%;
+        &.quintile-4 {
+          border-right: 0;
+        }
+        &:before,
+        &:after {
+          display: none !important;
+        }
+      }
     }
   }
 }
