--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -53,6 +53,7 @@ $color-untd-darklemon: #98980d;
 $color-untd-blue: #447a9c;
 $color-untd-lightgray: #b5bcc6;
 $color-untd-anothergray: #e0e2e5;
+$color-untd-another-another-gray: #86939c;
 
 // _______________ SPACING _______________ //
 // space elements in increments of .8rem (8px)
