--- a/src/styles/PanelLocationView.scss
+++ b/src/styles/PanelLocationView.scss
@@ -1,7 +1,9 @@
 .map-panel-slideout-location {
   overflow-y: scroll;
   height: 100%;
-  .panel-sticky {
+  margin-bottom: 100px;
+  .panel-sticky,
+  .panel-bottom-sticky {
     position: sticky;
     top: 0;
     left: 0;
@@ -15,6 +17,21 @@
       font-size: 1.8rem;
       line-height: 1.8rem;
       letter-spacing: 1%;
+    }
+  }
+  .panel-bottom-sticky {
+    bottom: 0;
+    top: auto;
+    border-top: 1px solid $color-untd-anothergray;
+    h5 {
+      font-size: 15px;
+      color: $color-untd-darkgray;
+    }
+    button {
+      font-size: 12px;
+      color: $color-untd-gray;
+      text-decoration: underline;
+      padding: 1rem 0;
     }
   }
   .panel-demographics {
