--- a/src/styles/Modal.scss
+++ b/src/styles/Modal.scss
@@ -92,6 +92,40 @@
           }
         }
       }
+      .search-autosuggest {
+        border-radius: 4px;
+        height: 40px;
+        max-width: 100%;
+        .icon-search {
+          width: 18px;
+          height: 18px;
+          left: 8px;
+          color: $color-untd-gray;
+        }
+        input {
+          height: 100%;
+          width: 100%;
+          border-radius: 4px;
+          background-color: transparent;
+          // padding-left: 32px;
+          // padding-right: 12px;
+          &:focus {
+            background-color: $white;
+          }
+        }
+        .button-search-clear {
+          display: none;
+          border-radius: 4px;
+          top: 0;
+          right: 0;
+          svg {
+            width: 18px;
+            height: 18px;
+            margin-right: 0;
+            color: $color-untd-gray;
+          }
+        }
+      }
       h2 {
         .cpal-logo {
           height: 50px;
