--- a/src/styles/SchoolSearch.scss
+++ b/src/styles/SchoolSearch.scss
@@ -49,8 +49,8 @@
     flex: 1 1 80%;
     .react-autosuggest__input {
       padding-left: 16px;
-      height: 30px;
-      font-size: 15px;
+      // height: 30px;
+      font-size: 12px;
     }
     ::-webkit-search-cancel-button {
       display: none;
@@ -85,6 +85,43 @@
           top: auto;
         }
       }
+    }
+  }
+}
+
+.search-autosuggest {
+  border-radius: 4px;
+  height: 40px;
+  font-size: 12px;
+  // max-width: 100%;
+  .icon-search {
+    width: 18px;
+    height: 18px;
+    left: 8px;
+    color: $color-untd-gray;
+  }
+  input {
+    height: 100%;
+    // height: 40px;
+    width: 100%;
+    border-radius: 4px;
+    background-color: transparent;
+    // padding-left: 32px;
+    // padding-right: 12px;
+    &:focus {
+      background-color: $white;
+    }
+  }
+  .button-search-clear {
+    display: none;
+    border-radius: 4px;
+    top: 0;
+    right: 0;
+    svg {
+      width: 18px;
+      height: 18px;
+      margin-right: 0;
+      color: $color-untd-gray;
     }
   }
 }
