--- a/src/styles/ControlPanel.scss
+++ b/src/styles/ControlPanel.scss
@@ -204,6 +204,7 @@
       color: $untd-font-gray;
       font-weight: 300;
       font-size: 1.3rem;
+      line-height: 1.2rem;
       margin-bottom: 16px;
       &:nth-of-type(3),
       &:nth-of-type(4),
