--- a/src/styles/ControlPanel.scss
+++ b/src/styles/ControlPanel.scss
@@ -175,8 +175,8 @@
       &.button-share {
         font-size: 14px;
       }
-      &.button-d-u-share-link {
-        @include font-gotham-book;
+      &.button-d-u-share-link,
+      &.button-feedback-link {
         width: 52px;
         height: 31px;
         min-height: 31px;
@@ -186,6 +186,14 @@
         border: 1px solid #e0e2e5;
         border-radius: 4px;
         color: $color-untd-gray;
+        span {
+          @include font-knockout-jr-lightweight;
+          font-size: 1.2rem;
+          line-height: 1.33rem;
+        }
+        svg {
+          margin: auto;
+        }
       }
     }
 
