--- a/src/styles/PanelInfoView.scss
+++ b/src/styles/PanelInfoView.scss
@@ -3,7 +3,7 @@
   font-size: 1.6rem;
   font-weight: 300;
   height: 100%;
-  div {
+  > div {
     height: 100%;
     overflow-y: scroll;
     h5 {
