--- a/src/styles/ControlPanel.scss
+++ b/src/styles/ControlPanel.scss
@@ -1,7 +1,3 @@
-// .canvas {
-//   position: relative;
-// }
-
 /* Extra small devices (phones, 767px and down) */
 .layout-control-panel {
   @include font-knockout-jr-lightweight;
@@ -213,12 +209,12 @@
       font-weight: 300;
       font-size: 1.3rem;
       line-height: 1.2rem;
-      margin-bottom: 16px;
-      &:nth-of-type(3),
-      &:nth-of-type(4),
-      &:nth-of-type(5) {
-        margin-bottom: 8px;
-      }
+      // margin-bottom: 16px;
+      // &:nth-of-type(3),
+      // &:nth-of-type(4),
+      // &:nth-of-type(5) {
+      //   margin-bottom: 8px;
+      // }
     }
     .button-view-map,
     .button-view-feeder,
@@ -244,10 +240,41 @@
     }
     button,
     .btn.btn-core {
-      margin-bottom: 16px;
-      margin-bottom: 8px;
+      // margin-bottom: 16px;
+      // margin-bottom: 8px;
       align-self: center;
       margin-right: 0 !important;
+      &:nth-of-type(4) {
+        margin-bottom: 12px;
+      }
+      &:nth-of-type(5) {
+        margin-bottom: 5px;
+      }
+    }
+
+    .button-panel-info,
+    .button-panel-location,
+    .button-panel-filters,
+    .button-panel-layers {
+      &:hover,
+      &.active,
+      &:focus {
+        background-color: transparent !important; // $color-untd-lemon; // #ffeee5;
+        &:before {
+          position: absolute;
+          width: 30px;
+          height: 30px;
+          content: '';
+          display: block;
+          margin: auto;
+          border-radius: 50%;
+          background-color: $color-untd-lemon;
+          z-index: 10;
+        }
+        svg {
+          z-index: 12;
+        }
+      }
     }
     .button-view-filters {
       margin-right: 0;
