Add location panel to mobile modal, styling issues

--- a/src/styles/PanelModal.scss
+++ b/src/styles/PanelModal.scss
@@ -6,6 +6,7 @@
   }
   .map-panel-slideout-filters,
   .map-panel-slideout-layers,
+  .map-panel-slideout-location,
   .map-panel-slideout-info {
     display: none;
     overflow-y: scroll;
@@ -42,6 +43,11 @@
   }
   &.panel-view-layers {
     .map-panel-slideout-layers {
+      display: block;
+    }
+  }
+  &.panel-view-location {
+    .map-panel-slideout-location {
       display: block;
     }
   }
