--- a/src/styles/PanelModal.scss
+++ b/src/styles/PanelModal.scss
@@ -15,6 +15,9 @@
       max-height: 70vh;
     }
   }
+  .map-panel-slideout-location {
+    margin-bottom: 0;
+  }
   .map-panel-slideout-filters,
   .map-panel-slideout-layers,
   .map-panel-slideout-info {
