--- a/src/styles/PanelLayerView.scss
+++ b/src/styles/PanelLayerView.scss
@@ -1,6 +1,6 @@
 .map-panel-slideout-layers {
   @include font-gotham-book;
-  padding: 2.8rem 2rem 2.8rem;
+  // padding: 2.8rem 2rem 2.8rem;
   font-size: 1.4rem;
   font-weight: 300;
   height: 100%;
@@ -17,7 +17,7 @@
     margin-bottom: 0.8rem;
   }
   h5 {
-    margin-bottom: 1.6rem;
+    // margin-bottom: 1.6rem;
     font-weight: 400;
     font-size: 18px;
     line-height: 28px;
@@ -51,6 +51,10 @@
     background-color: $white;
     padding: 2.8rem 0 2rem;
     z-index: 1999;
+  }
+  .points-group-parent,
+  .map-static-layer-toggle {
+    padding: 2rem;
   }
 
   h5 {
@@ -286,7 +290,7 @@
     background-color: $color-untd-anothergray;
     height: 0.5px;
     border: 0;
-    margin: 3rem -2rem 1rem -2rem;
+    margin: 1rem 0;
   }
 
   // Static layers.
