Adds data validation and notification to DataLoader

--- a/src/styles/DataLoader.scss
+++ b/src/styles/DataLoader.scss
@@ -48,5 +48,9 @@
         background-color: $color-untd-darklemon;
       }
     }
+    .data-issues-list {
+      height: 30vh;
+      overflow-y: scroll;
+    }
   }
 }
