Implements tooltip and proper number formatting for trend line, updates how raw data and trend data format are stored (on indicator)

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -101,6 +101,8 @@ html {
 // Search in header
 @import 'SchoolSearch';
 @import 'tooltip';
+// Trend chart
+@import 'TrendChart';
 // Intro Modal
 @import 'Modal';
 @import 'ShareLinkModal';
