Makes metric title clickable, updates tooltip, styles new metric button

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -54,6 +54,7 @@ $color-untd-blue: #447a9c;
 $color-untd-lightgray: #b5bcc6;
 $color-untd-anothergray: #e0e2e5;
 $color-untd-another-another-gray: #86939c;
+$color-untd-lightblue: #f9fafb;
 
 // _______________ SPACING _______________ //
 // space elements in increments of .8rem (8px)
