--- a/src/styles/PanelLocationView.scss
+++ b/src/styles/PanelLocationView.scss
@@ -36,7 +36,7 @@
   }
   .panel-demographics {
     padding: 1.6rem 2rem;
-    border-bottom: 1px solid $color-untd-anothergray;
+    // border-bottom: 1px solid $color-untd-anothergray;
     h6 {
       @include font-gotham-book;
       font-weight: 600;
@@ -59,18 +59,28 @@
     }
   }
   .panel-indicators {
-    padding: 1.6rem 2rem;
-    h6.indicator {
-      @include font-gotham-book;
-      font-weight: 600;
-      font-size: 1.4rem;
-      line-height: 1.6rem;
-      letter-spacing: 1%;
-      font-color: $color-untd-darkgray;
-      margin-top: 1.4rem;
-      svg {
-        margin-left: 0.35rem;
-        margin-top: -2px;
+    // padding: 1.6rem 2rem;
+    button.button-panel-location-metric {
+      width: 100%;
+      height: 56px;
+      text-align: left;
+      padding: 20px;
+      border: 1px solid $color-untd-anothergray;
+      border-right: 0;
+      border-left: 0;
+      background-color: $color-untd-lightblue;
+      h6.indicator {
+        @include font-gotham-book;
+        font-weight: 600;
+        font-size: 1.4rem;
+        line-height: 1.6rem;
+        letter-spacing: 1%;
+        font-color: $color-untd-darkgray;
+        // margin-top: 1.4rem;
+        svg {
+          margin-left: 0.35rem;
+          margin-top: -2px;
+        }
       }
     }
   }
