--- a/src/styles/PanelLocationView.scss
+++ b/src/styles/PanelLocationView.scss
@@ -60,27 +60,32 @@
   }
   .panel-indicators {
     // padding: 1.6rem 2rem;
-    button.button-panel-location-metric {
-      width: 100%;
-      height: 56px;
-      text-align: left;
-      padding: 20px;
-      border: 1px solid $color-untd-anothergray;
-      border-right: 0;
-      border-left: 0;
-      background-color: $color-untd-lightblue;
-      h6.indicator {
-        @include font-gotham-book;
-        font-weight: 600;
-        font-size: 1.4rem;
-        line-height: 1.6rem;
-        letter-spacing: 1%;
-        font-color: $color-untd-darkgray;
-        // margin-top: 1.4rem;
-        svg {
-          margin-left: 0.35rem;
-          margin-top: -2px;
+    .indicator-group {
+      button.button-panel-location-metric {
+        width: 100%;
+        height: 56px;
+        text-align: left;
+        padding: 20px;
+        border: 1px solid $color-untd-anothergray;
+        border-right: 0;
+        border-left: 0;
+        background-color: $color-untd-lightblue;
+        h6.indicator {
+          @include font-gotham-book;
+          font-weight: 600;
+          font-size: 1.4rem;
+          line-height: 1.6rem;
+          letter-spacing: 1%;
+          font-color: $color-untd-darkgray;
+          // margin-top: 1.4rem;
+          svg {
+            margin-left: 0.35rem;
+            margin-top: -2px;
+          }
         }
+      }
+      .charts-subgroup {
+        padding: 1.6rem 2rem;
       }
     }
   }
