--- a/src/styles/PanelLocationView.scss
+++ b/src/styles/PanelLocationView.scss
@@ -76,7 +76,7 @@
           font-size: 1.4rem;
           line-height: 1.6rem;
           letter-spacing: 1%;
-          font-color: $color-untd-darkgray;
+          color: $color-untd-darkgray;
           // margin-top: 1.4rem;
           svg {
             margin-left: 0.35rem;
@@ -86,6 +86,14 @@
       }
       .charts-subgroup {
         padding: 1.6rem 2rem;
+        .label-sd-scale {
+          text-transform: uppercase;
+          @include font-knockout-jr-lightweight;
+          font-size: 12px;
+          color: $color-untd-gray;
+          line-height: 15px;
+          letter-spacing: 5%;
+        }
       }
     }
   }
