--- a/src/styles/LinearScale.scss
+++ b/src/styles/LinearScale.scss
@@ -52,7 +52,7 @@
       border-radius: 50%;
       //   margin-top: -8px;
       margin-left: -8px;
-      background-color: $color-untd-blue;
+      background-color: $color-untd-gray; // $color-untd-blue;
     }
     .label {
       //   border: 1px solid blue;
@@ -77,7 +77,7 @@
       width: 1px;
       height: 19px;
       margin-top: -9px;
-      background-color: $color-untd-anothergray;
+      background-color: $color-untd-gray; // $color-untd-anothergray;
     }
     .label {
       font-weight: 400;
