--- a/src/styles/PanelLocationView.scss
+++ b/src/styles/PanelLocationView.scss
@@ -94,6 +94,47 @@
           line-height: 15px;
           letter-spacing: 5%;
         }
+        .sd-scale-group {
+          display: flex;
+          flex-wrap: nowrap;
+          .sd-scale-parent {
+            flex: 0 0 40%;
+          }
+          .sd-scale-desc {
+            padding: 0 1rem 0 1.5rem;
+            font-size: 12px;
+            line-height: 15px;
+            letter-spacing: 1%;
+            color: $color-untd-gray;
+          }
+        }
+      }
+      .section-trend-chart {
+        display: flex;
+        flex-wrap: wrap;
+        h6 {
+          flex: 0 0 100%;
+          text-transform: uppercase;
+          @include font-knockout-jr-lightweight;
+          font-size: 12px;
+          color: $color-untd-gray;
+          line-height: 15px;
+          letter-spacing: 5%;
+        }
+        .recharts-responsive-container {
+          flex: 0 0 auto;
+          .recharts-wrapper {
+            margin-left: -4px;
+          }
+        }
+        .trend-robo {
+          flex: 1 1 50%;
+          padding: 0 1rem 0 0.7rem;
+          font-size: 12px;
+          line-height: 15px;
+          letter-spacing: 1%;
+          color: $color-untd-gray;
+        }
       }
     }
   }
@@ -106,29 +147,31 @@
     &:before {
       display: none;
     }
-    .n-i-scale-quintiles {
-      width: 100%;
-      top: -5px !important;
-      // The line through the quintiles.
-      border: 1px solid #ccc;
-      height: 9px;
-      box-sizing: content-box;
-      margin-top: 0.6rem;
-      &:after,
-      &:before {
-        display: none !important;
-      }
-      .n-i-scale-quintile {
-        height: 13px;
-        border-right: 1px solid #ccc;
-        top: -1px;
-        width: 16.665%;
-        &.quintile-4 {
-          border-right: 0;
-        }
-        &:before,
-        &:after {
+    .n-i-scale-parent {
+      .n-i-scale-quintiles {
+        width: 100%;
+        top: -5px !important;
+        // The line through the quintiles.
+        border: 1px solid #ccc;
+        height: 16px;
+        box-sizing: content-box;
+        margin-top: 0.6rem;
+        &:after,
+        &:before {
           display: none !important;
+        }
+        .n-i-scale-quintile {
+          height: 100%;
+          border-right: 1px solid #ccc;
+          top: 0;
+          width: 16.665%;
+          &.quintile-4 {
+            border-right: 0;
+          }
+          &:before,
+          &:after {
+            display: none !important;
+          }
         }
       }
     }
