Updates styling on filter panel, remotes debounce hack for style reloading

--- a/src/styles/PanelFilterView.scss
+++ b/src/styles/PanelFilterView.scss
@@ -25,6 +25,13 @@
         line-height: 1.8rem;
         letter-spacing: 1%;
       }
+      .info,
+      .map-panel-instructions {
+        margin: 1rem 0;
+      }
+      .map-panel-instructions {
+        margin: 2rem 0 1rem;
+      }
     }
     h3 {
       font-weight: 600;
