--- a/src/styles/PanelLayerView.scss
+++ b/src/styles/PanelLayerView.scss
@@ -104,6 +104,17 @@
         stroke: $color-untd-gray;
       }
     }
+    &:active {
+      background-color: $color-untd-lemon !important;
+      border-color: $color-untd-darklemon !important;
+      color: $color-untd-gray;
+    }
+    &:focus {
+      border: 0;
+      border-color: $color-untd-darklemon !important;
+      outline: $color-untd-lemon auto 1px !important;
+      box-shadow: none;
+    }
   }
 
   .points-group-parent {
