Updates button border color

--- a/src/styles/PanelLayerView.scss
+++ b/src/styles/PanelLayerView.scss
@@ -112,7 +112,7 @@
     &:focus {
       border: 0;
       border-color: $color-untd-darklemon !important;
-      outline: $color-untd-lemon auto 1px !important;
+      outline: $color-untd-gray auto 1px !important;
       box-shadow: none;
     }
   }
