--- a/src/styles/ControlPanel.scss
+++ b/src/styles/ControlPanel.scss
@@ -107,7 +107,7 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    width: 376px;
+    width: 352px; // 376px;
     &.display-feeder {
       width: 272px;
     }
